
    <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/lightimgview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_x="0dp"
            android:layout_y="0dp"
            android:src="@drawable/light" />

        <TextView
            android:id="@+id/lighttext"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_x="105dp"
            android:layout_y="0dp"
            android:text="@string/lighttext"
            android:textSize="15pt" />

        <TextView
            android:id="@+id/light_text1"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_x="50dp"
            android:layout_y="140dp"
            android:text="@string/light_text1" />

        <TextView
            android:id="@+id/light_text4"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_x="50dp"
            android:layout_y="280dp"
            android:text="@string/light_text4" />

        <TextView
            android:id="@+id/light_text3"
            android:layout_width="108dp"
            android:layout_height="40dp"
            android:layout_x="50dp"
            android:layout_y="230dp"
            android:text="@string/light_text3" />

        <TextView
            android:id="@+id/light_text2"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_x="50dp"
            android:layout_y="185dp"
            android:text="@string/light_text2" />

        <Button
            android:id="@+id/light_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="120dp"
            android:layout_y="355dp"
            android:text="@string/back"
            android:textSize="12pt" />

        <EditText
            android:id="@+id/light_et4"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_x="120dp"
            android:layout_y="125dp"
            android:ems="10"
            android:enabled="false"
            android:textSize="18sp" 
            />

        <EditText
            android:id="@+id/light_et1"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_x="120dp"
            android:layout_y="170dp"
            android:ems="10"
            android:enabled="false"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/light_et2"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_x="120dp"
            android:layout_y="215dp"
            android:ems="10"
            android:enabled="false"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/light_et3"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_x="120dp"
            android:layout_y="260dp"
            android:ems="10"
            android:enabled="false"
            android:textSize="18sp" />

    </AbsoluteLayout>
